added some more base styles to theme game

--- a/index.html
+++ b/index.html
@@ -2,14 +2,18 @@
 <head>
 <title>JS Hangman</title>
 <link rel='stylesheet' href="./style.css">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=DotGothic16&display=swap" rel="stylesheet">
 <script src="index.js"></script>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<in>
-    <div class="contentWidth"><h1 class="mainHead">Hangman Game</h1>
+<body>
+    <div class="contentWidth"><h1 class="mainHead">The Matrix Hangman</h1>
     </div>
-    <div class="gameContainer">_ _ _ _ _ _</div>
-    <input>Guess a letter</input>
+    <div class="gameContainer">_ _ _ _ _ _
+    </div>
+    <div class="gameInfoContainer">    <p class="gameInfo">   Press a key to guess a letter</p>
+    </div>
 </body>
 </html>
