added some more styles and keyup event to log letter gueesed by user

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     </div>
     <div class="gameContainer">_ _ _ _ _ _
     </div>
-    <div class="gameInfoContainer">    <p class="gameInfo">   Press a key to guess a letter</p>
+    <div class="gameInfoContainer"><p class="gameInfo">Press a key to guess a letter</p>        
+        <p id="lettersGuessed">Letters guessed</p>
     </div>
 </body>
 </html>
