displaying some game info on page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<body>
+<body id="game">
     <div class="contentWidth"><h1 class="mainHead">The Matrix Hangman</h1>
     </div>
     <div class="gameContainer">_ _ _ _ _ _
