game functio ing correct need to clean up some stuff and figure out hangman dashes

--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
 <body id="game">
     <div class="contentWidth"><h1 class="mainHead">The Matrix Hangman</h1>
     </div>
-    <div class="gameContainer">_ _ _ _ _ _
+    <div class="gameContainer"><span class="correctGuess">_ _ _ _ _ _</span>
     </div>
     <div class="gameInfoContainer"><p class="gameInfo">Press a key to guess a letter</p>        
-        <p id="lettersGuessed">Letters guessed</p>
+        <p class="label">Letters Guessed -------> </p>
+        <p id="lettersGuessed"></p>
     </div>
 </body>
 </html>
